@@ -24,7 +24,7 @@
 
 
 load_lib mi-support.exp
-set MIFLAGS "-i=mi"
+set MIFLAGS "-i=mi0"
 
 gdb_exit
 if [mi_gdb_start] {
@@ -77,10 +77,10 @@ mi_gdb_test "200-break-insert do_locals_tests" \
 mi_run_cmd
 # The running part has been checked already by mi_run_cmd
 gdb_expect {
-    -re "\[\r\n\]*000\\*stopped,reason=\"breakpoint-hit\",bkptno=\"1\",thread-id=\"0\",frame=\{addr=\"$hex\",func=\"do_locals_tests\",args=\\\[\\\],file=\".*var-cmd.c\",line=\"106\"\}\r\n$mi_gdb_prompt$" {
+    -re "\[\r\n\]*000\\*stopped,reason=\"breakpoint-hit\",bkptno=\"1\",thread-id=\"0\",frame=\{addr=\"$hex\",func=\"do_locals_tests\",args=\{\},file=\".*var-cmd.c\",line=\"106\"\}\r\n$mi_gdb_prompt$" {
 	pass "run to do_locals_tests"
     }
-    -re ".*$mi_gdb_prompt$" {fail "run to do_locals_tests (2)"}
+    -re ".*$mi_gdb_prompt$" {fail "run todo_locals_tests (2)"}
     timeout {fail "run to do_locals_tests (timeout 2)"}
 }
 
@@ -180,7 +180,7 @@ mi_gdb_test "-var-update *" \
 	"update all vars"
 
 # Step over "linteger = 1234;"
-mi_step_to "do_locals_tests" "" "var-cmd.c" "107" "step at do_locals_test"
+mi0_step_to "do_locals_tests" "" "var-cmd.c" "107" "step at do_locals_test"
 
 # Test: c_variable-2.2
 # Desc: check whether only linteger changed values
@@ -189,7 +189,7 @@ mi_gdb_test "-var-update *" \
 	"update all vars: linteger changed"
 
 # Step over "lpinteger = &linteger;"
-mi_step_to "do_locals_tests" "" "var-cmd.c" 108 "step at do_locals_tests (2)"
+mi0_step_to "do_locals_tests" "" "var-cmd.c" 108 "step at do_locals_tests (2)"
 
 # Test: c_variable-2.3
 # Desc: check whether only lpinteger changed
@@ -198,7 +198,7 @@ mi_gdb_test "-var-update *" \
 	"update all vars: lpinteger changed"
 
 # Step over "lcharacter = 'a';"
-mi_step_to "do_locals_tests" "" "var-cmd.c" "109" "step at do_locals_tests (3)"
+mi0_step_to "do_locals_tests" "" "var-cmd.c" "109" "step at do_locals_tests (3)"
 
 # Test: c_variable-2.4
 # Desc: check whether only lcharacter changed
@@ -207,7 +207,7 @@ mi_gdb_test "-var-update *" \
 	"update all vars: lcharacter changed"
 
 # Step over "lpcharacter = &lcharacter;"
-mi_step_to "do_locals_tests" "" "var-cmd.c" "110" "step at do_locals_tests (4)"
+mi0_step_to "do_locals_tests" "" "var-cmd.c" "110" "step at do_locals_tests (4)"
 
 # Test: c_variable-2.5
 # Desc: check whether only lpcharacter changed
@@ -227,7 +227,7 @@ mi_gdb_test "-var-update *" \
 #  lsimple.unsigned_integer = 255;
 #  lsimple.character = 'a';
 
-mi_run_to "exec-step 9" "end-stepping-range" "do_locals_tests" "" \
+mi0_run_to "exec-step 9" "end-stepping-range" "do_locals_tests" "" \
 	"var-cmd.c" "119" "" "step at do_locals_tests (5)"
 
 # Test: c_variable-2.6
@@ -243,7 +243,7 @@ mi_gdb_test "-var-update *" \
 #  lpsimple = &lsimple;
 #  func = nothing;
 
-mi_run_to "exec-step 4" "end-stepping-range" "do_locals_tests" "" \
+mi0_run_to "exec-step 4" "end-stepping-range" "do_locals_tests" "" \
 	"var-cmd.c" "125" "" "step at do_locals_tests (6)"
 
 # Test: c_variable-2.7
@@ -262,7 +262,7 @@ mi_gdb_test "-var-update *" \
 #  lsimple.unsigned_integer = 4321;
 #  lsimple.character = 'b';
 
-mi_run_to "exec-step 8" "end-stepping-range" "do_locals_tests" "" \
+mi0_run_to "exec-step 8" "end-stepping-range" "do_locals_tests" "" \
 	"var-cmd.c" "133" "" "step at do_locals_tests (7)"
 
 # Test: c_variable-2.8
@@ -379,7 +379,7 @@ mi_gdb_test "-var-assign lsimple.integer 333" \
 mi_gdb_test "-break-insert subroutine1" \
 	"\\^done,bkpt=\{number=\"2\",type=\"breakpoint\",disp=\"keep\",enabled=\"y\",addr=\"$hex\",func=\"subroutine1\",file=\".*var-cmd.c\",line=\"146\",times=\"0\"\}" \
 	"break-insert subroutine1"
-mi_continue_to "2" "subroutine1" \
+mi0_continue_to "2" "subroutine1" \
 	"\{name=\"i\",value=\"4321\"\},\{name=\"l\",value=\"$hex\"\}" \
 	"var-cmd.c" "146" "continue to subroutine1"
 
@@ -399,7 +399,7 @@ mi_gdb_test "-var-create linteger * linteger" \
 	"&\"mi_cmd_var_create: unable to create variable object\\\\n\".*\\^error,msg=\"mi_cmd_var_create: unable to create variable object\"" \
 	"create linteger"
 
-mi_step_to "subroutine1" "\{name=\"i\",value=\".*\"\},\{name=\"l\",value=\".*\"\}" \
+mi0_step_to "subroutine1" "\{name=\"i\",value=\".*\"\},\{name=\"l\",value=\".*\"\}" \
 	"var-cmd.c" "147" "step at subroutine1"
 
 # Test: c_variable-2.12
@@ -415,7 +415,7 @@ mi_gdb_test "-var-update *" \
 	"update all vars: changed FIXME"
 clear_xfail *-*-*
 
-mi_step_to "subroutine1" "\{name=\"i\",value=\".*\"\},\{name=\"l\",value=\".*\"\}" \
+mi0_step_to "subroutine1" "\{name=\"i\",value=\".*\"\},\{name=\"l\",value=\".*\"\}" \
 	"var-cmd.c" "148" "step at subroutine1 (2)"
 
 # Test: c_variable-2.13
@@ -424,7 +424,7 @@ mi_gdb_test "-var-update *" \
 	"\\^done,changelist=\{name=\"i\",in_scope=\"true\",type_changed=\"false\"\}" \
 	"update all vars: i changed"
 
-mi_step_to "subroutine1" "\{name=\"i\",value=\".*\"\},\{name=\"l\",value=\".*\"\}" \
+mi0_step_to "subroutine1" "\{name=\"i\",value=\".*\"\},\{name=\"l\",value=\".*\"\}" \
 	"var-cmd.c" "149" "step at subroutine1 (3)"
 
 # Test: c_variable-2.14
@@ -433,7 +433,7 @@ mi_gdb_test "-var-update *" \
 	"\\^done,changelist=\{name=\"llong\",in_scope=\"true\",type_changed=\"false\"\}" \
 	"update all vars: llong changed"
 
-mi_next_to "do_locals_tests" ""	"var-cmd.c" "136" "next out of subroutine1"
+mi0_next_to "do_locals_tests" "" "var-cmd.c" "136" "next out of subroutine1"
 
 # Test: c_variable-2.15
 # Desc: check for out of scope subroutine1 locals
